--- a/public/style/login.css
+++ b/public/style/login.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f9fa;
+    background-color: #dfe9f5;
     display: flex;
     align-items: center;
     justify-content: center;
